fix blurred edges

--- a/style.css
+++ b/style.css
@@ -25,5 +25,6 @@
     left: 0;
     right: 0;
     filter: blur(8px);
+    scale: 1.1;
     background-image: url(images/KotrisVlag.png);
 }
